--- a/manifest.json
+++ b/manifest.json
@@ -1,71 +1,21 @@
 {
-  "name": "BakedModpack",
-  "version_number": "2.4.0",
-  "website_url": "https://github.com/blazingdrummer/BakedModpack",
-  "description": "A modpack designed for balanced play at all experience levels while expanding greatly upon the base game.",
-  "dependencies": [
-	"LuaFubuki-Void_Reaver-0.2.2",
-	"DevinWeaver-TheSurgeon-1.4.2",
-	"duckduckgreyduck-ArtificerExtended-1.2.1",
-	"Rein-AlternativeArtificer-1.1.0",
-	"Moffein-BanditReloaded-1.2.0",
-	"Rein-RogueWisp-2.1.5",
-	"KingEnderBrine-ProperSave-2.0.0",
-	"Harb-HarbCrate-1.0.2",
-	"Moffein-Phase_Round_Lightning-1.0.0",
-	"gog909-OrderedItems-2.2.1",
-	"Phedg1Studios-StartingItemsGUI-1.1.4",
-	"mistername-IlLine-1.0.0",
-	"Moffein-MULT_Buff-1.0.0",
-	"Moffein-MobileTurretBuff-1.1.0",
-	"duckduckgreyduck-SpeedyBeetles-1.0.5",
-	"duckduckgreyduck-DeathMarkFix-1.0.2",
-	"Rico-GiganticAmethyst-1.1.1",
-	"Sciman101-PocketPrinter-1.1.0",
-	"MagnusMagnuson-BazaarPrinter-0.2.2",
-	"Legendsmith-SolidIceWall-1.1.0",
-	"xiaoxiao921-Rampage-1.1.4",
-	"xiaoxiao921-DPSMeter-0.0.6",
-	"Jimmy-AcridPoisonBuffs-0.3.0",
-	"MagnusMagnuson-TemporaryLunarCoins-0.2.1",
-	"MagnusMagnuson-BiggerBazaar-1.9.3",
-	"Rein-LunarWickedRing-1.2.1",
-	"Rein-ArchaicWisps-2.0.1",
-	"Rein-GeneralFixes-2.3.4",
-	"hlista-SimpleRoll-1.0.0",
-	"JackPendarvesRead-EngiShieldNotification-3.0.0",
-	"Unordinal-AI_Blacklister-1.0.0",
-	"mistername-AllyPing-1.0.0",
-	"FunkFrog-and-Sipondo-ShareSuite-2.0.1",
-	"Harb-DiluvianDifficulty-1.0.5",
-	"Jarlyk-Raincoat-0.2.2",
-	"Timmeh42-2-StealthySpawn-1.0.0",
-	"TheRealElysium-ScalingBloodShrines-1.0.1",
-	"TheRealElysium-WaxQuailMultiJump-1.0.1",
-	"JackPendarvesRead-InfusionStackFix-5.0.2",
-	"TeaBoneJones-IncreaseHuntressRange-1.0.0",
-	"JackPendarvesRead-BulletFalloffFix-2.0.1",
-	"wildbook-TooManyFriends-1.0.0",
-	"MagnusMagnuson-ItemExchangeNotifier-1.3.0",
-	"TheRealElysium-Faster3DPrinters-1.0.0",
-	"MagnusMagnuson-ScannerPlusOne-2.5.0",
-	"JohnEdwa-RTAutoSprintEx-1.0.6",
-	"dan8991iel-LunarCoinShareOnPickup-3.6.1",
-	"MagnusMagnuson-ShrineOfDio-1.3.2",
-	"pixeldesu-Pingprovements-1.6.0",
-	"kookehs-StatsDisplay-2.3.0",
-	"Harb-HarbTweaks-1.3.0",
-	"TheRealElysium-EmptyChestsBeGone-1.1.1",
-	"JackPendarvesRead-MacroCommands-2.0.0",
-	"JackPendarvesRead-FluffyLabsConfigManagerTools-1.0.1",
-	"JackPendarvesRead-BepinexConfigurationManager-2.0.0",
-	"kristiansja-KeyBindForConsole-2.0.1",
-	"Harb-DebugToolkit-3.3.1",
-	"wildbook-MiniRpcLib-0.0.1",
-	"blazingdrummer-BakedLanguageEdits-2.0.7",
-	"Harb-AssetPlusRequester-1.0.0",
-	"Harb-LighterPatcher-1.0.2",
-	"tristanmcpherson-R2API-2.4.21",
-	"bbepis-BepInExPack-3.2.0"
-  ]
+    "name": "CheeseboyPack",
+    "version_number": "0.0.1",
+    "website_url": "https://github.com/nikolettuce/profiles",
+    "description": "modpack for me n my friends, and so others can join in easier :)",
+    "dependencies": [
+        "bbepis-BepInExPack-5.3.1",
+        "tristanmcpherson-R2API-2.5.4",
+        "wildbook-MiniRpcLib-0.0.2",
+        "wildbook-TooManyFriends-1.0.0",
+        "Jarlyk-Raincoat-1.0.2",
+        "JohnEdwa-RTAutoSprintEx-1.0.6",
+        "Rein-Sniper-1.0.7",
+        "Rein-RogueWisp-2.1.9",
+        "rob-Twitch-1.2.3",
+        "kinggrinyov-KingModUtilities-1.0.0",
+        "kinggrinyov-Goku-2.7.0",
+        "Matarra-PlayableSora-1.0.8",
+        "Matarra-PlayableAkali-1.0.4"
+    ]
 }
